Wed Feb 18 16:26:00 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:01:22 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Tue Jan  6 16:51:44 1998  Tom Yu  <tlyu@mit.edu>

	* seteuid.c (krb5_seteuid): Don't check for _POSIX_SAVED_IDS, as
 	4.4BSD derivatives don't define it but do have a reasonable
 	seteuid anyway. [krb5-libs/503]

Tue Nov 18 19:55:22 1997  Tom Yu  <tlyu@mit.edu>

	* configure.in: Use new library build rules.

	* Makefile.in: Use new library build rules.

Tue Feb 18 09:47:34 1997  Ezra Peisach  <epeisach@mit.edu>

	* compat_recv.c: Remove include of kerberosIV/krb4-proto.h

Mon May 20 02:37:44 1996  Sam Hartman  <hartmans@mit.edu>

	* seteuid.c: Include k5-int.h

Sun May 19 23:28:22 1996  Sam Hartman  <hartmans@mit.edu>

	* seteuid.c (krb5_seteuid): set saved uid to current effective
 	uid, not current real uid, so we can get back, while calling
 	setresuid().

Sat May 18 04:41:55 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in:  Check for functions needed to seteuid.

	* seteuid.c (krb5_seteuid): New function to allow UID to be
        changed and returned to later.
