@@ -1,7 +1,7 @@
 AC_INIT(configure.in)
 CONFIG_RULES
 AC_CHECK_HEADERS(unistd.h stdlib.h sys/types.h)
-AC_CHECK_FUNCS(seteuid setresuid setreuid)
+AC_CHECK_FUNCS(seteuid setresuid setreuid setegid setresgid setregid)
 dnl AppendRule([all:: all-$(WHAT)])
 KRB5_BUILD_LIBRARY_STATIC
 KRB5_BUILD_LIBOBJS
